frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: food-rescue-live # Deploying to the same namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # This image will be updated by our CI pipeline
          image: andresl123/frontend-app:f863118
          ports:
            - containerPort: 80 # Nginx serves on port 80
      nodeSelector:
        kubernetes.io/arch: arm64
