frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: food-rescue-live
spec:
  type: ClusterIP
  selector:
    app: frontend # Must match the deployment's label
  ports:
    - protocol: TCP
      port: 80       # Expose port 80
      targetPort: 80 # Target Nginx port 80
